--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,16 +4,16 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 <BaseLayout title="About" description="About Alleya Hanifa - Design Researcher, former children's book author, and blogger since 2008">
   <div class="page-content">
     <h2>TL;DR</h2>
-    <p>I'm Alleya Hanifa. <strong>Alleya</strong> for short. Currently a <strong>Design Researcher</strong> based in Jakarta, Indonesia. When I was younger, I published several <a href="https://www.goodreads.com/author/show/3348307.Alline">children books</a> and short stories, which is how you might have heard of me. Been blogging on different platforms (Multiply, Blogger, Tumblr, Wordpress) since 2008.</p>
+    <p>I'm Alleya Hanifa. <strong>Alleya</strong> for short. I'm a <strong>Design Researcher</strong> from Jakarta 🇮🇩 who is currently pursuing a master's degree in Public Sector Innovation and eGovernance with the Erasmus Mundus framework. When I was younger, I published several <a href="https://www.goodreads.com/author/show/3348307.Alline">children books</a> and short stories, which is how you might have heard of me. Been blogging on different platforms (Multiply, Blogger, Tumblr, Wordpress) since 2008.</p>
 
     <h2>Me @ Work</h2>
-    <p>Currently working at <a href="https://govtechedu.id">GovTech Edu</a>. If you're here for business, take a look at my <a href="/cv/">cv</a> here.</p>
+    <p>Previously working at <a href="https://govtechedu.id">INA Digital Edu/a>. If you're here for business, take a look at my <a href="/cv/">cv</a> here.</p>
 
     <h2>What am I up to?</h2>
     <p>Alleya is doing these right <strong><a href="/now">now</a></strong></p>
 
     <h2>About this blog</h2>
-    <p>This blog was built using Eleventy. Codes were entirely provided by Claude.</p>
+    <p>This blog was built using Astro. Codes were entirely provided by Claude.</p>
   </div>
   
   <style>
